# Neural-Arithmetic-Diagnostics

./: .gitignore  CONTRIBUTING.md  README.md  generate_diagram.py  neural_arithmetic_diagnostics.md  project_tree.py  project_tree_output.txt  pyproject.toml  requirements-dev.txt  requirements.in  requirements.lock.txt
Neural-Arithmetic-Diagnostics-main/: GETTING_STARTED_FAST.md  LICENSE  PROGRAM_LEVEL_SYNTHESIS.md  PROGRAM_PUBLICATION_STRATEGY.md  PROJECT_NAMING_CANON.md  PROJECT_STRUCTURE.md  README.md  STRATEGIC_RESEARCH_MAP.md  WHY_THIS_PROJECT_MATTERS.md  pyproject.toml  pytest.ini  requirements.piptools.lock.txt  requirements.txt  snapshot.md
Neural-Arithmetic-Diagnostics-main/.github/: CODEOWNERS
Neural-Arithmetic-Diagnostics-main/Papers/: KILLER_TEST_VERDICT_FINAL.md  PROJECT_3_QUICK_REFERENCE_CARD.md  THE_FINAL_JUDGMENT.md  killer_test_results.txt
Neural-Arithmetic-Diagnostics-main/assets/: repository_overview_spec.md
Neural-Arithmetic-Diagnostics-main/docs/: BRANCH_PROTECTION_CHECKLIST.md  REPRODUCIBILITY.md
Neural-Arithmetic-Diagnostics-main/final_audit/: CHECKPOINT_SHORT_2026-04-13.md  PHASE_2_PROJECT_1_BASELINE_SUMMARY_TEMPLATE.md  README.md  REVALIDATION_PLAN_FROM_ZERO.md
Neural-Arithmetic-Diagnostics-main/meta/: REPOSITORY_VISUAL_ASSET_PLAN.md  ROOT_LEVEL_VISIBILITY_AUDIT.md
Neural-Arithmetic-Diagnostics-main/nad/: cli.py  diff_gate.py  ledger.py
Neural-Arithmetic-Diagnostics-main/paper/: ARXIV_SUBMISSION_CHECKLIST.md  CITATION_PLACEHOLDER_PLAN.md
Neural-Arithmetic-Diagnostics-main/tests/: test_pytest_smoke.py
(+1123 files in other folders)
